public/out.css
/* ... */
.container {
  width: 100%;
}

@media (min-width: 640px) {
  .container {
    max-width: 640px;
  }
}

@media (min-width: 768px) {
  .container {
    max-width: 768px;
  }
}

@media (min-width: 1024px) {
  .container {
    max-width: 1024px;
  }
}

@media (min-width: 1280px) {
  .container {
    max-width: 1280px;
  }
}

@media (min-width: 1536px) {
  .container {
    max-width: 1536px;
  }
}

.pointer-events-none {
  pointer-events: none;
}

.invisible {
  visibility: hidden;
}

.absolute {
  position: absolute;
}

.relative {
  position: relative;
}

.sticky {
  position: sticky;
}

.inset-0 {
  top: 0px;
  right: 0px;
  bottom: 0px;
  left: 0px;
}

.top-0 {
  top: 0px;
}

.left-1\/2 {
  left: 50%;
}

.top-1\/2 {
  top: 50%;
}

.bottom-0 {
  bottom: 0px;
}

.left-0 {
  left: 0px;
}

.top-\[15\%\] {
  top: 15%;
}

.left-\[10\%\] {
  left: 10%;
}

.top-\[calc\(10\%-5px\)\] {
  top: calc(10% - 5px);
}

.right-\[40\%\] {
  right: 40%;
}

.top-\[25\%\] {
  top: 25%;
}

.left-\[15\%\] {
  left: 15%;
}

.bottom-\[25\%\] {
  bottom: 25%;
}

.right-\[35\%\] {
  right: 35%;
}

.bottom-\[5\%\] {
  bottom: 5%;
}

.z-50 {
  z-index: 50;
}

.z-10 {
  z-index: 10;
}

.z-20 {
  z-index: 20;
}

.order-2 {
  order: 2;
}

.order-1 {
  order: 1;
}

.mx-auto {
  margin-left: auto;
  margin-right: auto;
}

.my-5 {
  margin-top: 1.25rem;
  margin-bottom: 1.25rem;
}

.mb-8 {
  margin-bottom: 2rem;
}

.-mt-48 {
  margin-top: -12rem;
}

.mt-8 {
  margin-top: 2rem;
}

.-mt-12 {
  margin-top: -3rem;
}

.mt-6 {
  margin-top: 1.5rem;
}

.mt-16 {
  margin-top: 4rem;
}

.mb-5 {
  margin-bottom: 1.25rem;
}

.mt-4 {
  margin-top: 1rem;
}

.mb-2 {
  margin-bottom: 0.5rem;
}

.mb-12 {
  margin-bottom: 3rem;
}

.mb-16 {
  margin-bottom: 4rem;
}

.mt-20 {
  margin-top: 5rem;
}

.mb-10 {
  margin-bottom: 2.5rem;
}

.mr-4 {
  margin-right: 1rem;
}

.ml-4 {
  margin-left: 1rem;
}

.mb-6 {
  margin-bottom: 1.5rem;
}

.mb-4 {
  margin-bottom: 1rem;
}

.block {
  display: block;
}

.inline-block {
  display: inline-block;
}

.flex {
  display: flex;
}

.grid {
  display: grid;
}

.hidden {
  display: none;
}

.aspect-\[9\/16\] {
  aspect-ratio: 9/16;
}

.h-16 {
  height: 4rem;
}

.h-12 {
  height: 3rem;
}

.h-\[80vh\] {
  height: 80vh;
}

.h-full {
  height: 100%;
}

.h-auto {
  height: auto;
}

.h-32 {
  height: 8rem;
}

.h-0 {
  height: 0px;
}

.h-24 {
  height: 6rem;
}

.h-1\/3 {
  height: 33.333333%;
}

.h-\[425px\] {
  height: 425px;
}

.h-5 {
  height: 1.25rem;
}

.max-h-\[400px\] {
  max-height: 400px;
}

.w-auto {
  width: auto;
}

.w-full {
  width: 100%;
}

.w-\[36\%\] {
  width: 36%;
}

.w-\[90\%\] {
  width: 90%;
}

.w-0 {
  width: 0px;
}

.w-24 {
  width: 6rem;
}

.w-5 {
  width: 1.25rem;
}

.max-w-7xl {
  max-width: 80rem;
}

.max-w-sm {
  max-width: 24rem;
}

.max-w-2xl {
  max-width: 42rem;
}

.max-w-lg {
  max-width: 32rem;
}

.max-w-\[80\%\] {
  max-width: 80%;
}

.max-w-3xl {
  max-width: 48rem;
}

.max-w-\[216px\] {
  max-width: 216px;
}

.max-w-\[250px\] {
  max-width: 250px;
}

.max-w-\[181px\] {
  max-width: 181px;
}

.flex-shrink-0 {
  flex-shrink: 0;
}

.flex-grow {
  flex-grow: 1;
}

.-translate-x-1\/2 {
  --tw-translate-x: -50%;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}

.-translate-y-1\/2 {
  --tw-translate-y: -50%;
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}

.transform {
  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
}

.list-outside {
  list-style-position: outside;
}

.list-disc {
  list-style-type: disc;
}

.grid-cols-1 {
  grid-template-columns: repeat(1, minmax(0, 1fr));
}

.flex-col {
  flex-direction: column;
}

.items-center {
  align-items: center;
}

.justify-center {
  justify-content: center;
}

.justify-between {
  justify-content: space-between;
}

.gap-8 {
  gap: 2rem;
}

.gap-y-12 {
  row-gap: 3rem;
}

.gap-x-8 {
  -moz-column-gap: 2rem;
       column-gap: 2rem;
}

.gap-x-12 {
  -moz-column-gap: 3rem;
       column-gap: 3rem;
}

.space-x-6 > :not([hidden]) ~ :not([hidden]) {
  --tw-space-x-reverse: 0;
  margin-right: calc(1.5rem * var(--tw-space-x-reverse));
  margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
}

.space-y-2 > :not([hidden]) ~ :not([hidden]) {
  --tw-space-y-reverse: 0;
  margin-top: calc(0.5rem * calc(1 - var(--tw-space-y-reverse)));
  margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
}

.space-y-24 > :not([hidden]) ~ :not([hidden]) {
  --tw-space-y-reverse: 0;
  margin-top: calc(6rem * calc(1 - var(--tw-space-y-reverse)));
  margin-bottom: calc(6rem * var(--tw-space-y-reverse));
}

.space-y-4 > :not([hidden]) ~ :not([hidden]) {
  --tw-space-y-reverse: 0;
  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
}

.overflow-hidden {
  overflow: hidden;
}

.overflow-visible {
  overflow: visible;
}

.whitespace-nowrap {
  white-space: nowrap;
}

.rounded-md {
  border-radius: 0.375rem;
}

.rounded-lg {
  border-radius: 0.5rem;
}

.border-2 {
  border-width: 2px;
}

.border-t-2 {
  border-top-width: 2px;
}

.border-l-\[8px\] {
  border-left-width: 8px;
}

.border-r-\[8px\] {
  border-right-width: 8px;
}

.border-t-\[12px\] {
  border-top-width: 12px;
}

.border-t {
  border-top-width: 1px;
}

.border-brand-green {
  --tw-border-opacity: 1;
  border-color: rgb(42 157 143 / var(--tw-border-opacity));
}

.border-gray-500 {
  --tw-border-opacity: 1;
  border-color: rgb(107 114 128 / var(--tw-border-opacity));
}

.border-gray-300 {
  --tw-border-opacity: 1;
  border-color: rgb(209 213 219 / var(--tw-border-opacity));
}
/* ... */

